# NFLSchedulePresenter

./: .gitignore  CApiDataCompiler.cpp  CApiDataCompiler.hpp  CApiDataReader.cpp  CApiDataReader.hpp  CApiReader.cpp  CApiReader.hpp  CBaseDataFactory.hpp  CHttpClient.cpp  CHttpClient.hpp  CInputValidator.cpp  CInputValidator.hpp  CMakeLists.txt  CSiteContentFactory.cpp  CSiteContentFactory.hpp  CSiteContentUpdater.cpp  CSiteContentUpdater.hpp  InternalDb.cpp  InternalDb.hpp  main.cpp
Data/: CGame.hpp  CWeek.hpp
apiData/: week10_events.json  week11_events.json  week12_events.json  week13_events.json  week14_events.json  week15_events.json  week16_events.json  week17_events.json  week18_events.json  week1_events.json  week2_events.json  week3_events.json  week4_events.json  week5_events.json  week6_events.json  week7_events.json  week8_events.json  week9_events.json
website/: script copy.js  script.js  site.html  style.css
